deploy/manifests/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flux-atlas-ui
  labels:
    app: flux-atlas-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flux-atlas-ui
  template:
    metadata:
      labels:
        app: flux-atlas-ui
    spec:
      serviceAccountName: flux-atlas
      containers:
        - name: flux-atlas-ui
          # TODO: Change this to tag latest once image
          # build workflow is running on tags only
          image: ghcr.io/sd109/flux-atlas-ui:feat-rocket-api
          ports:
            - name: http
              containerPort: 3000
          imagePullPolicy: Always
