deploy/manifests/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flux-atlas-api
spec:
  selector:
    app: flux-atlas-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
