deploy/manifests/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flux-atlas-ui
spec:
  # Change this to expose UI
  # outside of cluster
  type: ClusterIP
  selector:
    app: flux-atlas-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
