deploy/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-atlas-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /api/
            backend:
              service:
                name: flux-atlas-api
                port:
                  name: http
          - pathType: Prefix
            path: /
            backend:
              service:
                name: flux-atlas-ui
                port:
                  name: http
